Added admin link on home page

--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -9,7 +9,15 @@
 {% block content %}
 <div class="body-container container" style="margin-top:10px;">
     <div class="row">
-        <h4>Welcome</h4>
+        <h2 style="color:gray">Welcome</h2>
+    </div>
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-2" class="text-muted" style="background-color:#f2f2f2;text-align:center; padding:30px;">
+            <a href="/admin">
+                <h4>ADMIN</h4>
+            </a>
+            <p>restricted access</p>
+        </div>
     </div>
 </div>
 {% endblock %}
