--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -1,26 +1,35 @@
 {% extends '../layout/layout.html' %}
 
+{% block style %}
+{% parent %}
+<style>
+.section {
+    color: #888;
+    font-size: 1.1em;
+}
+.section h4 {
+    margin-top: 40px;
+}
+</style>
+{% endblock %}
+
 {% block content %}
 <div class="container">
-    <!--
-    <div class="row">
-        <h4 class="col-md-12">Admin Page</h4>
-    </div>
-    -->
     <div class="row">
         <div class="col-md-12">
             <div class="section">
-                <h4>Modules</h4>
-                <div>
-                    <a href="/users">User</a>
-                </div>
-                <div>
-                    <a href="/items">Item</a>
-                </div>
+                <h4>System Module</h4>
                 <div>
                     <a href="/files">File</a>
                 </div>
-                <br/>
+                <div>
+                    <a href="/users">User</a>
+                </div>
+                <h4>Test Module</h4>
+                <div>
+                    <a href="/items">Item</a>
+                </div>
+                <h4>User Module</h4>
                 <div>
                     <a href="/announcements">Announcement</a>
                 </div>
