--- a/site/views/item/add.html
+++ b/site/views/item/add.html
@@ -21,14 +21,18 @@
     
     <div class="row" style="margin-top:20px;">
         <div class="col-md-6">
-            <form action="/item/add" method="POST">
+            <form action="/items/add" method="POST">
+                <div class="form-group">
+                    <label for="type">Name</label>
+                    <input type="text" class="form-control" name="name" />
+                </div>
                 <div class="form-group">
                     <label for="type">Type</label>
                     <input type="text" class="form-control" name="type" />
                 </div>
                 <div class="form-group">
                     <label for="content">Content</label>
-                    <input type="text" class="form-control" name="content" />
+                    <textarea class="form-control" name="content"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Save</button>
             </form>
