--- a/site/views/announcement/add.html
+++ b/site/views/announcement/add.html
@@ -2,7 +2,11 @@
 
 {% block script %}
 {% parent %}
-<script src="summernote.min.js"></script>
+<script src="/library/ace/ace.js"></script>
+<script src="/library/pagedown/Markdown.Converter.js"></script>
+<script src="/library/pagedown/Markdown.Sanitizer.js"></script>
+<script src="/library/pagedown/Markdown.Extra.js"></script>
+<script src="/script/announcement/add.js"></script>
 {% endblock %}
 
 {% block style %}
@@ -12,21 +16,168 @@
     padding-top: 30px;
     padding-bottom: 30px;
   }
+  .editor {
+    height: 348px;
+    padding: 0 0 0 5px;
+    margin: 0;
+  }
+  .panel {
+    min-height: 400px;
+  }
+  .editor-heading {
+    height: 50px;
+  }
+  #markdown_editor {
+    border-right: 1px inset;
+  }
+  #text_preview {
+    border-left: 1px inset;
+    overflow: auto;
+  }
+  .nested-data-element {
+    padding: 6px 12px;
+  }
+  .nested-data-btn {
+    padding: 0;
+    width: 41px;
+    height: 34px;
+  }
+  .tab-pane {
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
 </style>
-<link href="summernote.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <div class="container">
-  <div class="row add-form">
-    <div class="col-md-6 col-md-offset-3">
-      <form role="form" action="/announcements" enctype="multipart/form-data" method="POST">
-        <div class="form-group">
-          <p>Title: <input type="text" name="title"></p>
-          <p>Content: <input type="text" name="content"></p>
+  <div class="add-form">
+    <form role="form" action="/announcements" enctype="multipart/form-data" method="POST">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input class="form-control" id="title" placeholder="Announcement Title">
+      </div>
+      <div class="form-group">
+        <div class="panel panel-default" id="editor_panel">
+          <div class="editor-heading panel-heading">
+            <div class="btn-group">
+              <div class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Style">
+                  <span class="fa fa-magic"></span>
+                  <span class="caret"></span>
+                </button>
+              </div>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Bold" id="bold_button">
+                <span class="fa fa-bold"></span>
+              </button>
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Italics" id="italics_button">
+                <span class="fa fa-italic"></span>
+              </button>
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Underline" id="underline_button">
+                <span class="fa fa-underline"></span>
+              </button>
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Strikethrough" id="strikethrough_button">
+                <span class="fa fa-strikethrough"></span>
+              </button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Unordered List" id="unordered_list_button">
+                <span class="fa fa-list-ul"></span>
+              </button>
+              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Ordered List" id="ordered_list_button">
+                <span class="fa fa-list-ol"></span>
+              </button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default nested-data-btn" data-toggle="modal" data-target="#link_modal" id="link_button">
+                <span class="fa fa-link nested-data-element" data-toggle="tooltip" data-placement="bottom" title="Add a Link"></span>
+              </button>
+              <button type="button" class="btn btn-default nested-data-btn" data-toggle="modal" data-target="#img_modal" id="img_button">
+                <span class="fa fa-photo nested-data-element" data-toggle="tooltip" data-placement="bottom" title="Add a Picture"></span>
+              </button>
+            </div>
+          </div>
+          <div id="markdown_editor" class="editor col-sm-6"></div>
+          <div id="text_preview" class="editor col-sm-6"></div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Add</button>
-      </form>
+      </div>
+      <textarea class="form-control" id="content_markdown"></textarea>
+      <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Add</button>
+    </form>
+  </div>
+  <div class="modal fade" id="link_modal" tabindex="-1" role="dialog" aria-labelledby="link_modal_label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="link_modal_label">Add a link</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="link_url">Link URL</label>
+            <input class="form-control" id="link_url" placeholder="URL">
+          </div>
+          <div class="form-group">
+            <label for="link_label">Link Label</label>
+            <input class="form-control" id="link_label" placeholder="Label">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="add_link_button" data-dismiss="modal">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="img_modal" tabindex="-1" role="dialog" aria-labelledby="link_modal_label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="img_modal_label">Add a link</h4>
+        </div>
+        <div class="modal-body">
+          <div role="tabpanel">
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#photo_url_tab_area" aria-controls="home" role="tab" data-toggle="tab">Add Photo Using URL</a></li>
+              <li role="presentation"><a href="#upload_file_tab_area"aria-controls="profile" role="tab" data-toggle="tab">Upload Photo</a></li>
+              <li role="presentation"><a href="#select_existing_file_tab_area" aria-controls="messages" role="tab" data-toggle="tab">Select Existing Photo</a></li>
+            </ul>
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="photo_url_tab_area">
+                <div class="form-group">
+                  <label for="img_url">Link URL</label>
+                  <input class="form-control" id="img_url" placeholder="URL">
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane fade" id="upload_file_tab_area">
+                <!--<form role="form" action="/files/upload" enctype="multipart/form-data" method="POST">-->
+                  <div class="form-group">
+                    <label for="file" class="form-title">Select a file</label>
+                    <input type="file" class="form-control" name="file" id="file">
+                  </div>
+                <!--</form>-->
+              </div>
+              <div role="tabpanel" class="tab-pane fade" id="select_existing_file_tab_area">...</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="img_label">Link Label</label>
+            <input class="form-control" id="img_label" placeholder="Label">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="add_img_button" data-dismiss="modal">Add</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
