--- a/site/views/item/index.html
+++ b/site/views/item/index.html
@@ -20,8 +20,9 @@
     <div class="row">
         <div class="col-md-12">
             <ul>
-                <li><a href="/items/list">Item List</a></li>
                 <li><a href="/items/add">Add Item</a></li>
+                <li><a href="/items/list">Item List</a></li>
+                <li><a href="/items/list/react">Item List (React)</a></li>
             </ul>
         </div>
     </div>
