list_react.js added

--- a/site/views/item/list_react.html
+++ b/site/views/item/list_react.html
@@ -7,7 +7,7 @@
 
 {% block script %}
 {% parent %}
-<!-- <script src="/script/item/index.js"></script> -->
+<script src="/script/item/list_react.js"></script>
 {% endblock %}
 
 {% block content %}
