item list page update

--- a/site/views/item/index.html
+++ b/site/views/item/index.html
@@ -13,16 +13,25 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h4 class="col-md-12">
+        <h2 class="col-md-12">
             Item Home
-        </h4>
+        </h2>
     </div>
     <div class="row">
         <div class="col-md-12">
+            <h4>Page Routes</h4>
             <ul>
                 <li><a href="/items/add">Add Item</a></li>
                 <li><a href="/items/list">Item List</a></li>
                 <li><a href="/items/list/react">Item List (React)</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Data Routes</h4>
+            <ul>
+                <li><a href="/data/items">Get Items</a></li>
             </ul>
         </div>
     </div>
