--- a/site/views/item/list.html
+++ b/site/views/item/list.html
@@ -25,7 +25,8 @@
             <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th></th>
+                    <th style="width:100px;"></th>
+                    <th>Name</th>
                     <th>Type</th>
                     <th>Content</th>
                 </tr>
@@ -34,6 +35,7 @@
                 {% for item in items %}
                 <tr>
                     <td><a href="/items/{{ item._id + '' }}/detail" class="fa fa-info-circle"> Detail</a></td>
+                    <td>{{ item.name }}</td>
                     <td>{{ item.type }}</td>
                     <td>{{ item.content }}</td>
                 </tr>
