reactlet list component is copied over as start

--- a/site/views/item/list_react.html
+++ b/site/views/item/list_react.html
@@ -3,7 +3,7 @@
 {% block style %}
 {% parent %}
 <link rel="stylesheet" href="/component/common/common-style.css"/>
-<link rel="stylesheet" href="/component/list/list.css"/>
+<link rel="stylesheet" href="/component/item/list.css"/>
 {% endblock %}
 
 {% block script %}
@@ -11,8 +11,8 @@
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
-<script type="text/jsx" src="/component/list/list.js"></script>
-<script src="/script/item/list_react.js"></script>
+<script type="text/jsx" src="/component/item/list.js"></script>
+<script type="text/jsx" src="/script/item/list_react.js"></script>
 {% endblock %}
 
 {% block content %}
