--- a/site/views/item/list_react.html
+++ b/site/views/item/list_react.html
@@ -19,10 +19,15 @@
 <div class="container">
     
     <div class="row">
-        <h4 class="col-md-12">
+        <h4 class="col-md-4">
             Item List (React)
         </h4>
-        <div id="itemList" style="margin-top:20px;"></div>
+    </div>
+    
+    <div class="row" style="margin-top:10px;">
+        <div class="col-md-4">
+            <div id="itemList"></div>
+        </div>
     </div>
     
 </div>
