--- a/site/views/item/list_react.html
+++ b/site/views/item/list_react.html
@@ -8,6 +8,7 @@
 
 {% block script %}
 {% parent %}
+<script src="/library/underscore/underscore.js"></script>
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
