underscore library added in layout

--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -9,7 +9,8 @@
 {% block script %}
 <script src="/library/jquery/jquery.min.js"></script>
 <script src="/library/bootstrap/js/bootstrap.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<script src="/library/underscore/underscore.js"></script>
+<!-- <script src="/socket.io/socket.io.js"></script> -->
 {% endblock %}
 
 {% block style %}
