--- a/site/views/item/detail_react.html
+++ b/site/views/item/detail_react.html
@@ -1,5 +1,4 @@
 {% extends '../layout/layout.html' %}
-{% set item = page.item %}
 
 {% block style %}
 {% parent %}
@@ -14,6 +13,10 @@
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/script/item/detail_react.js"></script>
+<script>
+var app = app || {};
+app.itemId = '{{ page.itemId }}';
+</script>
 {% endblock %}
 
 {% block content %}
