--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -44,7 +44,7 @@
                     {{ page.user.username }} <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="/users/{{ page.user._id }}/profile}}" class="glyphicon glyphicon-home"> Profile</a></li>
+                    <li><a href="/users/{{ page.user._id }}/profile" class="glyphicon glyphicon-home"> Profile</a></li>
                     <li><a href="/users/logout" class="glyphicon glyphicon-log-out"> Logout</a></li>
                 </ul>
                 {% endif %}
