article list using react

--- a/site/views/article/index.html
+++ b/site/views/article/index.html
@@ -16,8 +16,13 @@
                 <div>
                     <a href="/articles/list">Article List(WYSIWYG)</a>
                 </div>
+                <div>
+                    <a href="/articles/list/react">Article List (React)</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
+
+
