page module with index page added

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -37,7 +37,10 @@
                     <a href="/articles">Article</a>
                 </div>
                 <div>
-                    <a href="/links">Links stuff</a>
+                    <a href="/links">Links</a>
+                </div>
+                <div>
+                    <a href="/pages">Pages</a>
                 </div>
             </div>
         </div>
