page template added; /pages/test route added

--- a/site/views/page/template.html
+++ b/site/views/page/template.html
@@ -14,13 +14,11 @@
 <div class="container" style="min-height:420px;">
     <div class="row">
         <h4 class="col-md-12">
-            Page Home
+            Page Template - {{ page.name }}
         </h4>
     </div>
-    <div class="row" style="margin-top:20px;">
+    <div class="row">
         <div class="col-md-12">
-            <a href="/pages/test">Test Page</a>
-        </div>
     </div>
 </div>
 {% endblock %}
