composition link added in admin index page

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -39,6 +39,10 @@
                 <div>
                     <a href="/links">Links</a>
                 </div>
+                <br/>
+                <div>
+                    <a href="/compositions">Composition</a>
+                </div>
                 <div>
                     <a href="/pages">Pages</a>
                 </div>
