--- a/site/views/article/add_edit_wysiwyg.html
+++ b/site/views/article/add_edit_wysiwyg.html
@@ -67,48 +67,54 @@ function progressHandlingFunction(e){
 {% endblock %}
 
 {% block content %}
+{% set article = page.article %}
 <div class="container">
     
     <div class="row">
         <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
-            <div style="text-align:center;">Add article(WYSIWYG test)</div>
+            <div style="text-align:center;">{{page.title}}</div>
         </div>
     </div>
-    
-    <!--
-    <div id="summernote">Hello Summernote</div>
-    -->
-    
-    
-    
+
     <div class="row">
+        <!--
         <progress></progress>
+        -->
     
-        <form role="form" action="/data/article/wysiwyg_post" method="POST" enctype="mulitpart/form-data">
+        <form role="form" action="{{page.formAction}}" method="POST" enctype="mulitpart/form-data">
             <fieldset>
+                {% if page.operation == 'Edit' %}
+                    <input type="hidden" name="id_hidden" value="{{article._id + ''}}" />
+                {% endif %} 
+                
+                
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="title" placeholder="Title" value="">
+                    {% if page.operation == 'Add' %}
+                        <input class="form-control" type="text" id="title" name="title" placeholder="Title" value="">
+                    {% elseif page.operation == 'Edit' %}
+                        <input class="form-control" type="text" id="title" name="title" placeholder="Title" value="{{article.title}}">
+                    {% endif %}     
                 </div>
          
                 <div class="form-group">
                     <label for="summernote">Content</label>
                     <textarea class="input-block-level" id="summernote" name="content" rows="18">
-                        
+                        {% if page.operation == 'Add' %}
+                        {% elseif page.operation == 'Edit' %}
+                            {{article.content}}
+                        {% endif %}  
                     </textarea>
                 </div>
-    
             </fieldset>
-         
-            <button type="submit" class="btn btn-primary">Save Changes</button>
+
+            <button type="submit" class="btn btn-primary">{{page.operation}}</button>
+            <!--
             <button type="button" id="cancel" class="btn">Cancel</button>
+            -->
         </form>
     
     </div>
-    
-    
-    
-    
 
 </div>
 {% endblock %}
