color on a block

--- a/site/views/article/list.html
+++ b/site/views/article/list.html
@@ -34,7 +34,7 @@
                       <td>
                           Create Date
                       </td>
-                      <td>
+                      <td class="alert alert-danger">
                           Operation
                       </td>
                   </tr>
