page object populated; test page widgets added

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -27,15 +27,21 @@
     
     <div class="row">
         <h4 class="col-md-12">
+            <div class="title">{{ page.name }}</div>
+        </h4>
+    </div>
+    
+    <div class="row">
+        <h4 class="col-md-12">
             <div class="r1c1 widget-container"></div>
         </h4>
     </div>
     
     <div class="row" style="margin-top:10px;">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="r2c1 widget-container"></div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
             <div class="r2c2 widget-container"></div>
         </div>
     </div>
