--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -27,7 +27,9 @@
     
     <div class="row">
         <h4 class="col-md-12">
-            <div class="title">{{ page.name }}</div>
+            <div>name: {{ page.name }}</div>
+            <div>description: {{ page.description }}</div>
+            <div>composition: {{ page.composition }}</div>
         </h4>
     </div>
     
