--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -19,6 +19,7 @@
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/item/list.js"></script>
+<script type="text/jsx" src="/script/page/support.js"></script>
 <script type="text/jsx" src="/script/composition/sidenav.js"></script>
 {% endblock %}
 
