links list and detail(react), other

--- a/site/views/link/index.html
+++ b/site/views/link/index.html
@@ -11,7 +11,9 @@
                 <div>
                     <a href="/links/show_all">Show All Links</a>
                 </div>
-                
+                <div>
+                    <a href="/links/list/react">Links List(React)</a>
+                </div>
             </div>
         </div>
     </div>
