added data request in article index page

--- a/site/views/article/index.html
+++ b/site/views/article/index.html
@@ -9,7 +9,16 @@
     -->
     <div class="row">
         <div class="col-md-12">
-            <div class="section">
+            
+            <div class="section" style="margin-bottom:20px;">
+                <h4>Data Section</h4>
+                <div>
+                    <a href="/data/articles/title/Mission%20of%20PTA">Get article by title</a>
+                </div>
+            </div>
+            
+            <div class="section" style="margin-bottom:20px;">
+                <h4>Page Section</h4>
                 <div>
                     <a href="/articles/add_wysiwyg">Add Article(WYSIWYG)</a>
                 </div>
@@ -20,6 +29,7 @@
                     <a href="/articles/list/react">Article List (React)</a>
                 </div>
             </div>
+            
         </div>
     </div>
 </div>
