link->linkset, on display

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -37,7 +37,7 @@
                     <a href="/articles">Article</a>
                 </div>
                 <div>
-                    <a href="/links">Links</a>
+                    <a href="/links">Linkset</a>
                 </div>
                 <br/>
                 <div>
