--- a/site/views/link/add.html
+++ b/site/views/link/add.html
@@ -30,7 +30,7 @@ function remove_group(who) {
     
     <div class="row">
         <h4 class="col-md-12">
-            Add Links
+            Add Linkset
         </h4>
     </div>
 
