--- a/site/views/link/detail_react.html
+++ b/site/views/link/detail_react.html
@@ -24,7 +24,7 @@ app.linkId = '{{ page.linkId }}';
     
     <div class="row">
         <h4 class="col-md-6">
-            Link Detail
+            Linkset Detail (React)
         </h4>
     </div>
     
