--- a/site/views/link/list_react.html
+++ b/site/views/link/list_react.html
@@ -20,7 +20,7 @@
     
     <div class="row">
         <h4 class="col-md-4">
-            Links List (React)
+            Linkset List (React)
         </h4>
     </div>
     
