--- a/site/views/article/detail_react.html
+++ b/site/views/article/detail_react.html
@@ -24,7 +24,7 @@ app.articleId = '{{ page.articleId }}';
     
     <div class="row">
         <h4 class="col-md-12">
-            Article Detail
+            Article Detail (React)
         </h4>
     </div>
     
