--- a/site/views/link/list.html
+++ b/site/views/link/list.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
-            <div style="text-align:center;">Links List</div>
+            <div style="text-align:center;">Linkset List</div>
         </div>
     </div>
     
