linkset name and other

--- a/site/views/link/detail_react.html
+++ b/site/views/link/detail_react.html
@@ -30,7 +30,7 @@ app.linkId = '{{ page.linkId }}';
     
     <div class="row" style="margin-top:10px;">
         <div class="col-md-6">
-            <div id="linkDetail"></div>
+            <div id="linksetDetail"></div>
         </div>
     </div>
     
