--- a/site/views/link/list_react.html
+++ b/site/views/link/list_react.html
@@ -26,7 +26,7 @@
     
     <div class="row" style="margin-top:10px;">
         <div class="col-md-4">
-            <div id="itemList">
+            <div id="linksetList">
             </div>
         </div>
     </div>
