for linkset module

--- a/site/views/linkset/index.html
+++ b/site/views/linkset/index.html
@@ -6,13 +6,13 @@
         <div class="col-md-12">
             <div class="section">
                 <div>
-                    <a href="/links/add_links">Add Linkset</a>
+                    <a href="/linksets/add_links">Add Linkset</a>
                 </div>
                 <div>
-                    <a href="/links/show_all">Show All Linkset</a>
+                    <a href="/linksets/show_all">Show All Linkset</a>
                 </div>
                 <div>
-                    <a href="/links/list/react">Linkset List (React)</a>
+                    <a href="/linksets/list/react">Linkset List (React)</a>
                 </div>
             </div>
         </div>
