--- a/site/views/linkset/list.html
+++ b/site/views/linkset/list.html
@@ -34,7 +34,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for group in page.links %}
+                {% for group in page.linksets %}
                     <tr>
                         <td>
                             {{ group.name }}
