--- a/site/views/linkset/list_react.html
+++ b/site/views/linkset/list_react.html
@@ -3,7 +3,7 @@
 {% block style %}
 {% parent %}
 <link rel="stylesheet" href="/component/common/common-style.css"/>
-<link rel="stylesheet" href="/component/link/detail.css"/>
+<link rel="stylesheet" href="/component/linkset/list.css"/>
 {% endblock %}
 
 {% block script %}
@@ -11,26 +11,23 @@
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
-<script type="text/jsx" src="/component/link/detail.js"></script>
-<script type="text/jsx" src="/script/link/detail_react.js"></script>
-<script>
-var app = app || {};
-app.linkId = '{{ page.linkId }}';
-</script>
+<script type="text/jsx" src="/component/linkset/list.js"></script>
+<script type="text/jsx" src="/script/linkset/list_react.js"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
     
     <div class="row">
-        <h4 class="col-md-6">
-            Linkset Detail (React)
+        <h4 class="col-md-4">
+            Linkset List (React)
         </h4>
     </div>
     
     <div class="row" style="margin-top:10px;">
-        <div class="col-md-6">
-            <div id="linksetDetail"></div>
+        <div class="col-md-4">
+            <div id="linksetList">
+            </div>
         </div>
     </div>
     
