widget display update

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -50,6 +50,25 @@ function showWidget(targetClass, widget) {
         var widgetData = data.docs && data.docs[0] || null;
         
         console.log('widget data:', widgetData);
+        
+        // render widget with data obtained
+        
+        // add field component to fields array
+        /*
+        this.widgets = {
+            ItemList: ItemList,
+            ItemDetail: ItemDetail,
+            ArticleDetail: ArticleDetail,
+            LinksetDetail: LinksetDetail
+        },
+        var fields = [];
+        fields.push( this.widgets[field.type]({
+            key: field.key,
+            ref: field.name,
+            data:field.data
+        }) );
+        */
+        
     });
 }
 </script>
