--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
+<link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
 <style>
 .widget-container {
     border: solid 1px #f2f2f2;
@@ -19,6 +20,7 @@
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
+<script type="text/jsx" src="/component/cabinet/cabinet.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
@@ -63,7 +65,7 @@ function showWidget(targetClass, widget) {
         
         console.log('widget data:', widgetData);
         // render widget with data obtained
-        this.widgets['ArticleDetail']({
+        app.widgets['ArticleDetail']({
             data: widgetData
         });
         
