password reset and emailEngine

--- a/site/views/user/login.html
+++ b/site/views/user/login.html
@@ -37,7 +37,8 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg" style="width:100%;">LOGIN</button>
                 <div style="margin-top:40px;text-align:center;">
-                    Need account? <a href="/users/signup">Signup here</a>
+                    <p>Need account? <a href="/users/signup">Signup here</a></p>
+                    <p>Forgot your password? <a href="/users/password/reset">Click here</a>.</p>
                 </div>
             </form>
         </div>
