--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -67,31 +67,13 @@ function showWidget(widget) {
         console.log('widget data:', widgetData);
         var cabinetData = {
             items: [
-                { type:'ArticleDetail', data:widgetData }
+                { type:this.widgetName, data:widgetData }
             ]
         };
         React.render(
             <Cabinet data={ cabinetData } />,
             $('.' + this.targetClass)[0]
         );
-
-        /*
-        // render widget with data obtained
-        app.widgets['ArticleDetail']({
-            data: widgetData
-        });
-        */
-        
-        // add field component to fields array
-        /*
-        var fields = [];
-        fields.push( this.widgets[field.type]({
-            key: field.key,
-            ref: field.name,
-            data:field.data
-        }) );
-        */
-        
     }.bind(widget));
 }
 </script>
