--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -19,7 +19,15 @@
     </div>
     <div class="row" style="margin-top:20px;">
         <div class="col-md-12">
-            <a href="/pages/test">Test Page</a>
+            <ul>
+                <li><a href="/pages/main">Main</a></li>
+                <br/>
+                <li><a href="/pages/news">News</a></li>
+                <li><a href="/pages/advocacy">Advocacy</a></li>
+                <li><a href="/pages/events">Events</a></li>
+                <li><a href="/pages/soca">SoCA</a></li>
+                <li><a href="/pages/engage">Engage</a></li>
+            </ul>
         </div>
     </div>
 </div>
