--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -30,5 +30,5 @@
     padding: 10px 10px 0px;
     margin-left: 0;
     margin-right: 0;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
 }
