page pages update

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -18,7 +18,15 @@
         </h4>
     </div>
     <div class="row" style="margin-top:20px;">
-        <div class="col-md-12">
+        <div class="col-md-6">
+            <h4>Page Support</h4>
+            <ul>
+                <li><a href="/pages/list">Page List</a></li>
+                <li><a href="/pages/add">Add Page</a></li>
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <h4>Page Display</h4>
             <ul>
                 <li><a href="/pages/main">Main</a></li>
                 <br/>
