--- a/site/views/user/login.html
+++ b/site/views/user/login.html
@@ -36,6 +36,7 @@
                     <input type="password" class="form-control" name="password" id="password" placeholder="">
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg" style="width:100%;">LOGIN</button>
+                <input type="hidden" name="redirect" value="{{ page.redirect }}" />
                 <div style="margin-top:40px;text-align:center;">
                     <p>Need account? <a href="/users/signup">Signup here</a></p>
                     <p>Forgot your password? <a href="/users/password/reset">Click here</a>.</p>
