--- a/site/views/user/index.html
+++ b/site/views/user/index.html
@@ -1,5 +1,4 @@
 {% extends '../layout/layout.html' %}
-{% set users = page.docs %}
 
 {% block style %}
 {% parent %}
@@ -19,6 +18,7 @@
                 <li><a href="/users/signup">User Signup</a></li>
                 <li><a href="/users/login">User Login</a></li>
                 <li><a href="/users/logout">User Logout</a></li>
+                <li><a href="/users/list">User List</a></li>
             </ul>
         </div>
     </div>
