page add page - update

--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -18,7 +18,21 @@
         </h4>
     </div>
     <div class="row" style="margin-top:20px;">
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="form-group row">
+                <label for="pageName" class="col-sm-3 control-label">Name</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="pageName" placeholder="">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group row">
+                <label for="pageComposition" class="col-sm-3 control-label">Composition</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="pageComposition" placeholder="">
+                </div>
+            </div>
         </div>
     </div>
 </div>
