add page update

--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -30,7 +30,7 @@
             <div class="form-group row">
                 <label for="pageComposition" class="col-sm-3 control-label">Composition</label>
                 <div class="col-sm-9">
-                    <select class="form-control select-composition"></select>
+                    <select class="form-control composition-select"></select>
                 </div>
             </div>
         </div>
