add page update

--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -12,11 +12,13 @@
 
 {% block content %}
 <div class="container" style="min-height:420px;">
+    
     <div class="row">
         <h4 class="col-md-12">
             Add Page
         </h4>
     </div>
+    
     <div class="row" style="margin-top:20px;">
         <div class="col-md-4">
             <div class="form-group row">
@@ -35,5 +37,21 @@
             </div>
         </div>
     </div>
+    
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-3">
+            <h4>Section</h4>
+            <div class="section-container">
+                
+                
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="block-container">
+                block
+            </div>
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
