--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -3,6 +3,13 @@
 {% block style %}
 {% parent %}
 <link rel="stylesheet" href="/style/page/add.css">
+<style>
+.section-item {
+    padding: 10px;
+    margin-top: 10px;
+    border: solid 1px #f2f2f2;
+}
+</style>
 {% endblock %}
 
 {% block script %}
@@ -40,7 +47,7 @@
     
     <div class="row" style="margin-top:20px;">
         <div class="col-md-3">
-            <h4>Section</h4>
+            <h4>Sections</h4>
             <div class="section-container">
                 
                 
